fix(style): borders grid are not collapsed

--- a/src/style.css
+++ b/src/style.css
@@ -207,6 +207,10 @@
   max-width: fit-content;
 }
 
+.rdp-month_grid {
+  border-collapse: collapse;
+}
+
 .rdp-nav {
   position: absolute;
   inset-block-start: 0;
