--- a/src/style.module.css
+++ b/src/style.module.css
@@ -207,6 +207,10 @@
   max-width: fit-content;
 }
 
+.month_grid {
+  border-collapse: collapse;
+}
+
 .nav {
   position: absolute;
   inset-block-start: 0;
